bandlimited: Add an audio-filter2 bridge to this audio-filter.

Primary work by Christophe Massiot, Cleaned up and tested by myself.

This should fix #1630 and is the first part of #1835